src/components/Navbar/Navbar.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.navbar{
    width: 100%;
}
.navbar .container{
    display: flex;
    justify-content: space-between; 
    max-width: 1250px;
    margin: 0px auto;
}
.navbar .container .main-logo{
    width: 150px;
    height: 70px;
}
.navbar .container input {
    display: none; 
  }
  
.navbar .container .menu-icon {
    padding: 35px 20px;
    position: relative;
    cursor: pointer;
}
.navbar .container .menu-icon .nav-icon {
    background: #325288;
    display: block;
    height: 2px;
    width: 24px;
    position: relative;
}
.navbar .container .menu-icon .nav-icon:before {
    background: #325288;
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    width: 100%;
    top: 7px;
}
.navbar .container .menu-icon .nav-icon:after {
    background: #325288;
    content: "";
    display: block;
    height: 100%;
    position: absolute;
    width: 100%;
    top: -7px;
}
.navbar .container input:checked ~  .menu-icon .nav-icon{
    background: transparent;
}
.navbar .container input:checked ~  .menu-icon .nav-icon:before{
    transform: rotate(-45deg);
    top: 0;
}
.navbar .container input:checked ~  .menu-icon .nav-icon:after{
    transform: rotate(45deg);
    top: 0;
}
.navbar .container .container-navigation{
    display: flex;
    align-items: center;
}

/*Barra de navegación*/
.navbar .container nav {
    display: block;
    position: absolute;
    top: 70px;
    width: 100%;
    display: none;
    z-index: 2; 
    left: 0;
  }
.navbar .container nav ul {
    margin: 0;
    flex-direction: column;
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: flex-end;
    font-family: monospace;
    font-size: 16px; 
}
.navbar .container nav ul li a {
    color: #325288;
    display: block;
    padding: 10px 20px;
    text-decoration: none; 
}
.navbar .container input:checked ~ .container-navigation nav {
    display: block;
}

/*Media queries*/
@media (min-width: 768px) {
    .navbar{
        background-color: #f4eee8;;
    }
    .navbar .container{
      display: flex;
      justify-content: space-between;
      height: 80px; 
    }
    .navbar .container nav {
      top: 0; 
      display: block;
      position: relative;
    }
    .navbar .container nav ul {
      display: flex;
      flex-direction: row;
      padding: 20px; 
    }
    .navbar .container nav ul li a {
      color: #325288;
      padding: 10px 20px; 
    }
    .navbar .container nav ul li a:hover {
      font-weight: 700;
    }
    .navbar .container nav ul li a:active {
      color: hsla(218, 46%, 36%, 0.6);
      text-decoration: line-through;
    }
    .navbar .container label {
      display: none;
      color: white; 
    }
    .navbar .container .main-logo {
      z-index: 3;
      margin: 0px 5px;
      width: 200px;
    }
}

